--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,7 +32,7 @@ jobs:
           sudo apt-get -y install buildah
       - name: Login to GitLab Registry
         env:
-          REGISTRY_USER: ${{ secrets.GITLAB_USER }}
+          REGISTRY_USER: Bpolig56
           REGISTRY_PASSWORD: ${{ secrets.GITLAB_TOKEN }}
         run: |
           echo "$REGISTRY_PASSWORD" | buildah login -u "$REGISTRY_USER" --password-stdin registry.gitlab.com
@@ -52,9 +52,9 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USER }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: bpolig56
+          password: dckr_pat_59jdiYw6Sms2wrVp9ksBcfvmmeg
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKERHUB_USER }}/app:latest .
+        run: docker build -t bpolig56/app:latest .
       - name: Push to Docker Hub
-        run: docker push ${{ secrets.DOCKERHUB_USER }}/app:latest
+        run: docker push bpolig56/app:latest
