--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -36,14 +36,12 @@ jobs:
           REGISTRY_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
         run: |
           buildah login -u "$REGISTRY_USER" --password "$REGISTRY_PASSWORD" ghcr.io
-      - name: Set working directory
-        run: cd $GITHUB_WORKSPACE
       - name: Build image with Buildah
         run: |
-          buildah bud -t ghcr.io/${{ github.repository }}/app:latest
+          buildah bud -f Dockerfile -t ghcr.io/${{ github.repository_owner }}/app:latest .
       - name: Push image to GitHub Container Registry
         run: |
-          buildah push ghcr.io/${{ github.repository }}/app:latest
+          buildah push ghcr.io/${{ github.repository_owner }}/app:latest
 
   # 3. Build & Push avec Docker -> Docker Hub
   docker-dockerhub:
