--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,6 +25,9 @@ jobs:
   buildah-github:
     runs-on: ubuntu-latest
     needs: test-install
+    permissions:
+      contents: read
+      packages: write
     steps:
       - uses: actions/checkout@v4
       
